Started building Navigation component

--- a/src/App.css
+++ b/src/App.css
@@ -22,11 +22,54 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+}
+
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+nav {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  width: 100vw;
+  height: 3.5rem;
+  background-color: rgba(36, 36, 36, 0.6);
+  position: fixed;
+  z-index: 50;
+  top: 0px;
+  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
+  margin: 0px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #39f7d2;
+  text-transform: uppercase;
+  font-size: 1rem;
+  transition: all 400ms;
+}
+
+nav a:hover {
+  color: white;
 }
