--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
+
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -72,4 +79,149 @@ nav a {
 
 nav a:hover {
   color: white;
+}
+
+.materialIcons {
+  font-family: 'Material Icons';
+  font-size: 3.2rem;
+}
+
+#about {
+  height: 34.5rem;
+  width: 100%;
+  position: relative;
+  background-color: #242424;
+  color: #39f7d2;
+  background-image: url('/header.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+#about .container {
+  width: 100%;
+  height: 100%;
+  max-width: 1200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  text-align: center;
+}
+
+#about h1 {
+  font-size: 3.75rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin: 1rem;
+}
+
+#about h3 {
+  font-weight: 400;
+  font-size: 1rem;
+  margin: 0px;
+  text-transform: uppercase;
+}
+
+#contact {
+  height: 8rem;
+  width: 100%;
+  background-color: #242424;
+  color: #39f7d2;
+}
+
+#contact a img {
+  width: 1.75rem;
+}
+
+#contact .content {
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 55%;
+  height: 100%;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+#work {
+  min-height: 40rem;
+  width: 100%;
+  background-color: #39f7d2;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding-bottom: 4rem;
+}
+
+.button {
+  display: inline-block;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
+  font-size: 2.5rem;
+  border: 4px solid white;
+  padding: 0.25rem 1rem;
+  margin: 2rem;
+}
+
+#work .content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+#work .project {
+  width: 25rem;
+  height: 18rem;
+  margin: 1rem;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.45);
+}
+
+.project .thumbnail {
+  background-size: cover;
+  height: 75%;
+  width: 100%;
+  border-radius: 5px 5px 0px 0px;
+}
+
+.project .description {
+  height: 25%;
+  border-radius: 0px 0px 5px 5px;
+  color: grey;
+  font-weight: 300;
+  line-height: 1.5rem;
+  padding: 0.5rem;
+  margin: 0px;
 }
