--- a/src/App.css
+++ b/src/App.css
@@ -185,6 +185,10 @@ nav a:hover {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.45);
 }
 
+#work a {
+  text-decoration: none;
+}
+
 .project .thumbnail {
   background-size: cover;
   height: 75%;
@@ -221,5 +225,10 @@ nav a:hover {
 
 #hangry .thumbnail {
   background-image: url('/Hangry.gif');
+  background-size: cover;
+}
+
+#blockchain .thumbnail {
+  background-image: url('/blockchain.png');
   background-size: cover;
 }
