Added Knave project

--- a/src/App.css
+++ b/src/App.css
@@ -188,7 +188,7 @@ nav a:hover {
 }
 
 .project p {
-  font-size: .9rem;
+  font-size: 0.9rem;
   margin: 0px;
 }
 
@@ -204,6 +204,11 @@ nav a:hover {
 
 #blockchain .thumbnail {
   background-image: url('/blockchain.png');
+  background-size: cover;
+}
+
+#knave .thumbnail {
+  background-image: url('/Knave.png');
   background-size: cover;
 }
 
@@ -234,5 +239,5 @@ nav a:hover {
 }
 
 #contact p {
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
