--- a/src/App.css
+++ b/src/App.css
@@ -153,43 +153,48 @@ nav a:hover {
 #work .project {
   width: 25rem;
   height: 18rem;
-  margin: 1rem;
   background-color: white;
   border-radius: 5px;
+  display: flex;
+  flex-direction: column;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.45);
+  margin: 1.5rem;
 }
 
 #work a {
   text-decoration: none;
 }
 
-.project .thumbnail {
-  background-size: cover;
-  height: 75%;
-  width: 100%;
+.project .img-container {
+  height: 70%;
   border-radius: 5px 5px 0px 0px;
+  overflow: hidden;
+  flex-grow: 1;
+}
+
+.project img {
+  width: 100%;
+}
+
+.project .description {
+  height: 30%;
+  border-radius: 0px 0px 5px 5px;
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
+  color: grey;
+  z-index: 100;
+  box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.15);
+}
+
+.project p {
+  font-size: 0.9rem;
 }
 
 .project .description .title {
   font-size: 1.1rem;
   font-weight: 700;
   display: block;
-}
-
-.project .description {
-  border-radius: 0px 0px 5px 5px;
-  color: grey;
-  margin: 0px;
-  height: 25%;
-  display: flex;
-  padding-left: 1rem;
-  align-items: center;
-  box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.15);
-}
-
-.project p {
-  font-size: 0.9rem;
-  margin: 0px;
 }
 
 #reactUi .thumbnail {
